--- a/views/pages/nav/directory.html
+++ b/views/pages/nav/directory.html
@@ -62,33 +62,42 @@
             {{mask}}{{ Select a directory below: }}
           </h2>
           <div class="box-button-container">
-            <a
+            
               id="emtooltip"
               href="{{route}}{{/emulators}}"
               class="box-button tippy-button"
               data-tippy-content="{{mask}}{{Emulators [Webretro v6.5]: Fully ported RetroArch with over 20 emulators featured!}}"
               >{{mask}}{{Emulators}}</a
             >
-            <a
+            
               id="eltooltip"
               href="{{route}}{{/retro-games}}"
               class="box-button tippy-button"
               data-tippy-content="{{mask}}{{EmuLibrary [Collection]: Popular collection of games sourced from other websites. You can set this via the settings menu.}}"
               >{{mask}}{{EmuLibrary}}</a
             >
-            <a
+            
               id="wgtooltip"
               href="{{route}}{{/web-games}}"
               class="box-button tippy-button"
               data-tippy-content="{{mask}}{{Web Games [Collection]: Collection of popular web games, including WebGL and HTML5 games.}}"
               >{{mask}}{{Web Games}}</a
             >
-            <a
+            
               id="fgtooltip"
               href="{{route}}{{/flash-games}}"
               class="box-button tippy-button"
               data-tippy-content="{{mask}}{{Flash Games [Collection]: Collection of Flash games emulated via Ruffle.}}"
               >{{mask}}{{Flash Games}}</a
+            >
+            <!-- ADD GN-MATH BUTTON HERE -->
+            
+              id="gntooltip"
+              href="#"
+              onclick="openGnMath(); return false;"
+              class="box-button tippy-button"
+              data-tippy-content="{{mask}}{{gn-math [Collection]: Unblocked games collection with hundreds of games!}}"
+              >{{mask}}{{gn-math}}</a
             >
           </div>
         </div>
@@ -98,5 +107,14 @@
       <!--FOOTER-->
     </div>
     <!-- IMPORTANT-HUCOOKINGINSERT-DONOTDELETE -->
+    
+    <!-- GN-MATH SCRIPT -->
+    <script>
+      function openGnMath() {
+        const url = 'https://cdn.jsdelivr.net/gh/gn-math/gn-math-DONTDMCA@main/';
+        const proxiedURL = '/scram/service/' + encodeURIComponent(url);
+        window.location.href = proxiedURL;
+      }
+    </script>
   </body>
 </html>
